--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,6 +3,12 @@ code, pre {
   font-size: 14px;
 }
 
+pre {
+  background-color: rgba(207, 203, 175, 0.42);
+  margin: 1em 0;
+  overflow: auto;
+}
+
 .published_header {
   color: #666666;
   font-weight: bold;
@@ -58,3 +64,36 @@ table.data {
   table.data td {
     border: 1px solid #999999;
     padding: 5px; }
+
+.video-embed {
+  width: 100%;
+  position: relative;
+  height: 0;
+  margin-bottom: 1.5rem;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+}
+.video-embed > iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.post_content img, .post_content figure, .post_content video {
+  max-width: 100%;
+  margin: 1em 0;
+}
+
+.post_content h2 {
+  margin: 1em 0;
+  font-weight: bold;
+  color: #206FAC;
+}
+
+.post_content h3 {
+  margin: 1em 0;
+  font-weight: bold;
+}
+
