Add prism to code pigmentation and remove highlight.pack

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <!-- curl -o _includes/head.html http://rizzo.lonelyplanet.com/modern/head -->
 {% include head.html %}
 <link href="/css/stylesheet.css" rel="stylesheet" />
+<link href="/css/prism.css" rel="stylesheet" />
 <!-- curl -o _includes/body-header.html http://rizzo.lonelyplanet.com/modern/body-header -->
 {% include body-header.html %}
 
@@ -58,5 +59,7 @@
   ga('create', 'UA-44258102-1', 'lonelyplanet.github.io');
   ga('send', 'pageview');
 </script>
+<script src="/js/prism.js"></script>
+
 <!-- curl -o _includes/body-footer.html http://rizzo.lonelyplanet.com/modern/body-footer -->
 {% include body-footer.html %}
