--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -86,6 +86,12 @@ table.data {
   margin: 1em 0;
 }
 
+.post_content img.right {
+  float: right;
+  margin-left: 1em;
+
+}
+
 .post_content h2 {
   margin: 1em 0;
   font-weight: bold;
