--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 
 <!-- curl -o _includes/head.html http://rizzo.lonelyplanet.com/modern/head -->
 {% include head.html %}
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="/css/stylesheet.css" rel="stylesheet" />
 <link href="/css/prism.css" rel="stylesheet" />
 <!-- curl -o _includes/body-header.html http://rizzo.lonelyplanet.com/modern/body-header -->
