--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,11 @@
           <li class="github">
             <a href="https://github.com/lonelyplanet">Github</a>
           </li>
+          <li class="github">
+            <a href="https://github.com/lplabs">LP Labs Github</a>
+          </li>
           <li class="twitter">
-            <a href="https://twitter.com/lonelyplanet">Twitter</a>
+            <a href="https://twitter.com/lplabs">Twitter</a>
           </li>
           <li class="linked_in">
             <a href="http://www.linkedin.com/company/lonely-planet">LinkedIn</a>
@@ -41,7 +44,7 @@
             <a href="https://coderwall.com/team/lonely-planet/">coderwall</a>
           </li>
           <li class="jobs">
-            <a href="https://lonelyplanet.recruiterbox.com/" class="hero-unit">Now Hiring</a>
+            <a href="https://lonelyplanet.com/jobs" class="hero-unit">Now Hiring</a>
           </li>
         </ul>
       </div>
