Added microdata, fixed link to jobs page, added author links on posts page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
             <a href="https://coderwall.com/team/lonely-planet/">coderwall</a>
           </li>
           <li class="jobs">
-            <a href="https://lonelyplanet.com/jobs" class="hero-unit">Now Hiring</a>
+            <a href="http://www.lonelyplanet.com/careers" class="hero-unit">Now Hiring</a>
           </li>
         </ul>
       </div>
