--- a/_includes/post_summary.html
+++ b/_includes/post_summary.html
@@ -1,15 +1,26 @@
-        {% assign author = site.authors[post.author] %}
-        <div class="post card card--page card--page--article">
+{% assign author = site.authors[post.author] %}
+<article class="post card card--page card--page--article" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
 
-          <div class="post_title">
-            <a href="{{ site.baseurl }}{{ post.url }}"><h3 class="copy--h3">{{ post.title }}</h3></a>
-          </div>
-          <div class="post_content">
-            <p>{{ post.excerpt }}</p>
-          </div>
-          <a href="{{ site.baseurl }}{{ post.url }}">Read more...</a>
-              
-          <div class="published_date">
-            <span class="modified_on">{{ post.date | date_to_string }}</span> by <span class="modified_by">{{ author.display_name }}</span>
-          </div>
-        </div>
+  <div class="post_title">
+    <h3 class="copy--h3">
+      <a href="{{ site.baseurl }}{{ post.url }}" itemprop="url">
+        <span itemprop="headline">{{ post.title }}</span>
+      </a>
+    </h3>
+  </div>
+
+  <div class="post_content">
+    <p itemprop="articleBody">{{ post.excerpt }}</p>
+  </div>
+
+  <a href="{{ site.baseurl }}{{ post.url }}">Read more&hellip;</a>
+      
+  <div class="published_date">
+    <time class="modified_on" itemprop="datePublished" content="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time>
+    by
+    <span class="modified_by" itemprop="author" itemscope itemtype="http://schema.org/Person">
+      <span itemprop="name">{{ author.display_name }}</span>
+    </span>
+  </div>
+
+</article>
