Updated Rizzo includes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,14 @@
-<!--[if (gt IE 8) | (IEMobile)]><!--><link href="//assets.staticlp.com/assets/common_core-c5ff8c86524526e6a2ebda67ff32107f.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]--><!--[if (lt IE 9) & (!IEMobile)]><link href="//assets.staticlp.com/assets/common_core_ie-b2b77840a6622e948e23011bb27ffa54.css" media="all" rel="stylesheet" type="text/css" /><![endif]-->
-<link href='//www.lonelyplanet.com/favicon.ico' rel='icon' type='image/gif'>
+
+<meta charset='utf-8'>
+<meta content='Lonely Planet' name='author'>
+<meta content='#1D508D' name='theme-color'>
+<meta content='111537044496' name='fb:app_id'>
+
+<link href='http://assets.staticlp.com' rel='dns-prefetch'>
+<link href='https://www.lonelyplanet.com/favicon.ico' rel='icon' type='image/x-icon'>
+<meta content='width=device-width, initial-scale=1' name='viewport'>
+<meta content="authenticity_token" name="csrf-param" />
+<meta content="22s8tfGrziWarwQvaWlyRU6nwIEoHRFlZy0h76drqHI=" name="csrf-token" />
 <!--[if lt IE 9]>
 <script>
   document.createElement('header');
@@ -12,11 +21,35 @@
   document.createElement('figurecap');
   document.createElement('hgroup');
   document.createElement('time');
+  document.createElement('picture');
 </script>
 <![endif]-->
 <script>
   // Setup our namespace
-  window.lp = {};
+  window.lp = window.lp || {};
+  
+  // Allow legacy apps to add their own properties
+  window.lp.tracking = window.lp.tracking || {};
+  window.lp.supports = window.lp.supports || {};
+  
+  // Setting up Adblock checker
+  window.lp.isAdblockActive = true;
+  
+  // Allow apps to pass in requirejs configuration
+  window.lp.require = {
+    paths: {},
+    shim: {}
+  }
+  
+  window.lp.analytics = window.lp.analytics || {
+    dataLayer: {},
+    eventBuffer: [],
+    api: {
+      trackEvent: function(data){
+        window.lp.analytics.eventBuffer.push(data);
+      }
+    }
+  };
   
   // Utility cookie retrieval function
   window.lp.getCookie = function (name) {
@@ -24,7 +57,6 @@
   };
   
   // Test for LocalStorage support (and space)
-  window.lp.supports = {};
   window.lp.supports.localStorage = 'localStorage' in window && (function() {
     try {
       localStorage.setItem("test", "test");
@@ -35,11 +67,21 @@
     }
   }());
   
+  window.lp.supports.woff2 = (function(){
+    if (typeof window.FontFace != "function") return false;
+  
+    var f = new window.FontFace("t", 'url( "data:application/font-woff2," ) format( "woff2" )');
+  
+    f.load().catch(function() {});
+    return f.status == 'loading';
+  }());
+  
   // Setup js error logging
   var _trackJs = {
-    customer: '3cd28f4c5df14f6e9fffa815ed7712b0',
-    globalAlias: false,
-    consoleDisplay: true,
+    token: '3cd28f4c5df14f6e9fffa815ed7712b0',
+    console: {
+      display: true
+    },
     userId: window.lp.getCookie('lpUid')
   };
   
@@ -48,17 +90,142 @@
   
   // Initialise a flamsteed buffer
   window.lp.fs = {
-    buffer: [], 
-    log : function(x){this.buffer.push({e: x})},
-    time: function(x){!!window.performance && !!window.performance.now && this.buffer.push({e: x, t: window.performance.now()})}
+    buffer: [],
+    now: function(){return (Date.now ? Date.now() : new Date().getTime());},
+    log : function(x){this.buffer.push({e: x, t: this.now()})},
+    time: function(x){!!window.performance && !!window.performance.now && this.buffer.push({e: x, t: this.now()})}
   };
-  
-  // Dev analytics package
+</script>
+
+<script>
+  /*
+  loadCSS: load a CSS file asynchronously.
+  [c]2014 @scottjehl, Filament Group, Inc.
+  Licensed MIT
+  */
+  window.lp.loadCSS = function loadCSS( href, before, media ){
+    "use strict";
+    var ss = window.document.createElement( "link" ),
+        ref = before || window.document.getElementsByTagName( "script" )[ 0 ],
+        sheets = window.document.styleSheets;
+    
+    ss.rel = "stylesheet";
+    ss.href = href;
+    // temporarily, set media to something non-matching to ensure it'll fetch without blocking render
+    ss.media = "only x";
+    ref.parentNode.insertBefore( ss, ref );
+    // Set the link's media back to `all` so that the stylesheet applies once it loads
+    function toggleMedia(){
+      var defined;
+      for( var i = 0; i < sheets.length; i++ ){
+        if( sheets[ i ].href && sheets[ i ].href.indexOf( href ) > -1 ){
+          defined = true;
+        }
+      }
+      if( defined ){
+        ss.media = media || "all";
+      }
+      else {
+        setTimeout( toggleMedia );
+      }
+    }
+    toggleMedia();
+    return ss;
+  }
+</script>
+
+<!-- BEGIN Krux Control Tag for "LonelyPlanet" -->
+<!-- Source: /snippet/controltag?confid=JQiEA_VL&site=LonelyPlanet&edit=1 -->
+<script class="kxct" data-id="JQiEA_VL" data-timing="async" data-version="1.9" type="text/javascript">
+  window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
+  (function(){
+    var k=document.createElement('script');k.type='text/javascript';k.async=true;
+    var m,src=(m=location.href.match(/\bkxsrc=([^&]+)/))&&decodeURIComponent(m[1]);
+    k.src = /^https?:\/\/([a-z0-9_\-\.]+\.)?krxd\.net(:\d{1,5})?\//i.test(src) ? src : src === "disable" ? "" :
+      (location.protocol==="https:"?"https:":"http:")+"//cdn.krxd.net/controltag?confid=JQiEA_VL"
+  ;
+    var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
+  }());
+
+</script>
+<!-- END Krux Controltag -->
+
+<script>
+
+  // Allow DFP tracking
+  window.Krux||((Krux=function()
+    {Krux.q.push(arguments);}).q=[]);
+     (function(){
+     function retrieve(n){
+     var m, k='kx'+n;
+     if(window.localStorage){
+     return window.localStorage[k] || "";
+     }else if(navigator.cookieEnabled){
+     m = document.cookie.match(k+'=([^;]*)');
+     return (m && unescape(m[1])) || "";
+     }else{
+     return '';
+     }
+     }
+     Krux.user = retrieve('user');
+     Krux.segments = retrieve('segs') &&
+    retrieve('segs').split(',') || [];
+     })();
+
+</script>
+
+<script type='text/javascript' src='https://c.amazon-adsystem.com/aax2/amzn_ads.js'></script>
+<script type='text/javascript'>
+    try {
+        amznads.getAds('3231');
+    } catch(e) {
+      /*ignore*/
+    }
+</script>
+
+<script type='text/javascript'>
+  var googletag = googletag || {};
+  googletag.cmd = googletag.cmd || [];
+  try { amznads.setTargetingForGPTAsync('amznslots'); } catch(e) { /*ignore*/}
+</script>
+
+
+<script type='text/javascript'>
+var crtg_nid = '4008';
+var crtg_cookiename = 'crtg_lonely';
+var crtg_varname = 'crtg_content';
+function crtg_getCookie(c_name){ var i,x,y,ARRCookies=document.cookie.split(";");for(i=0;i<ARRCookies.length;i++){x=ARRCookies[i].substr(0,ARRCookies[i].indexOf("="));y=ARRCookies[i].substr(ARRCookies[i].indexOf("=")+1);x=x.replace(/^\s+|\s+$/g,"");if(x==c_name){return unescape(y);} }return'';}
+var crtg_content = crtg_getCookie(crtg_cookiename);
+var crtg_rnd=Math.floor(Math.random()*99999999999);
+(function(){
+var crtg_url=location.protocol+'//rtax.criteo.com/delivery/rta/rta.js?netId='+escape(crtg_nid);
+crtg_url +='&cookieName='+escape(crtg_cookiename);
+crtg_url +='&rnd='+crtg_rnd;
+crtg_url +='&varName=' + escape(crtg_varname);
+var crtg_script=document.createElement('script');crtg_script.type='text/javascript';crtg_script.src=crtg_url;crtg_script.async=true;
+if(document.getElementsByTagName("head").length>0)document.getElementsByTagName("head")[0].appendChild(crtg_script);
+else if(document.getElementsByTagName("body").length>0)document.getElementsByTagName("body")[0].appendChild(crtg_script);
+})();
+</script>
+
+<script type="text/javascript">
+    var googletag = googletag || {};
+    googletag.cmd = googletag.cmd || [];
+    var crtg_split = crtg_content.split(';');
+    for (var i = 1; i < crtg_split.length; i++) {
+        if (crtg_split[i - 1].indexOf('=') == -1) continue;
+        var sp = crtg_split[i - 1].split('=');
+        googletag.cmd.push((function(key, value) {return function() {googletag.pubads().setTargeting(key, value); } })(sp[0], sp[1]) );
+    }
+</script>
+
+<script>
+  // Google analytics
   (function(d,t,c){
-    if (!d.cookie.match(/lpDev/)) return;
-    var g=d.createElement(t);
-    var s=d.getElementsByTagName(t)[0];
-    g.src="//assets.staticlp.com/analytics/analytics.dev.js?"+c.getTime();
+    var filepath = d.cookie.match(/lpDev/) ? "analytics.dev.js?" +c.getTime() : "analytics.min.js",
+        g=d.createElement(t),
+        s=d.getElementsByTagName(t)[0];
+    g.src="//assets.staticlp.com/analytics/" + filepath;
     s.parentNode.insertBefore(g,s);
   }(document,"script",new Date));
 </script>
@@ -76,9 +243,8 @@
   if (window.lp.enhanced && window.localStorage.getItem('_lpfont') == "true") {
     var ss = document.createElement('link'),
         firstLink = document.getElementsByTagName('link')[0],
-        fontPath = "//assets.staticlp.com/assets/fonts-e7917f9cfeeb9cc0cff58f06f7ecd6b0.css";
+        fontPath = window.lp.supports.woff2 ? "//assets.staticlp.com/assets/fonts_woff2-aa4a7cac7478e02c9c475f0e0b897588.css" : "//assets.staticlp.com/assets/fonts-ba1db2addba075ab3f5ce1a7e07a36a8.css";
   
-    
     ss.href= fontPath;
     ss.rel = "stylesheet";
     ss.type = "text/css";
@@ -92,51 +258,74 @@
 <script>
   (function() {
     var docElement = document.documentElement,
-        activePath = "//assets.staticlp.com/assets/icons/active-a863f94e0975254b63a6b191afceb5ff.css",
-        criticalPath = "//assets.staticlp.com/assets/icons/critical-c6c92dc99d15ff5f7ac9896475db482c.css";
-    function styleSheet(path) {
-      var link = document.createElement("link");
-      link.rel = "stylesheet";
-      link.type = "text/css";
-      link.href = path;
-      return link;
+        activePath = "//assets.staticlp.com/assets/icons/active-572f9eefa63f9a373fdc42fcca914e6a.css",
+        criticalPath = "//assets.staticlp.com/assets/icons/critical-991f9f786871bce50b983ccaa7adc9e5.css";
+  
+    function supportsSVG() {
+      var hasBgSize = ("background-size" in docElement.style || "backgroundSize" in docElement.style),
+          hasSvg = !!window.document.createElementNS &&
+                   !!window.document.createElementNS('http://www.w3.org/2000/svg', 'svg').createSVGRect &&
+                   !!document.implementation.hasFeature("http://www.w3.org/TR/SVG11/feature#Image", "1.1") &&
+                   !(window.opera && navigator.userAgent.indexOf('Chrome') === -1);
+  
+      return hasBgSize && hasSvg;
     }
-    window.setTimeout(function(){
-      var script = document.getElementsByTagName("script")[0];
-      var head = script.parentNode;
-      if ("background-size" in docElement.style || "backgroundSize" in docElement.style) {
-        head.insertBefore(styleSheet(activePath), script);
-        docElement.className += " supports-svg";
-      } else {
-        head.insertBefore(styleSheet(criticalPath), script);
-        docElement.className += " no-background-size";
-      }
-    }, 0)
+  
+    if (window.lp.enhanced && supportsSVG()) {
+      window.lp.loadCSS(activePath);
+      docElement.className += " supports-svg";
+    } else {
+      window.lp.loadCSS(criticalPath);
+      docElement.className += " no-background-size";
+    }
+  
   }());
 </script>
 <noscript>
-<link href='//assets.staticlp.com/assets/icons/critical-c6c92dc99d15ff5f7ac9896475db482c.css' rel='stylesheet'>
+<link href='//assets.staticlp.com/assets/icons/critical-991f9f786871bce50b983ccaa7adc9e5.css' rel='stylesheet'>
 </noscript>
 
 <script>
-  var require = {
+  var require = require || {
     baseUrl: '/assets',
     paths: {
       flamsteed: "flamsteed/lib/javascripts/flamsteed",
-      gpt: "//www.googletagservices.com/tag/js/gpt",
       hogan: "hogan/dist/hogan-3.0.0.amd",
       jplugs: "jquery-plugins",
-      jquery:  "jquery/jquery",
-      pointer: "pointer",
+      jquery:  "jquery/dist/jquery",
+      jtimeago: "jquery-timeago/jquery.timeago",
       sailthru: "sailthru/v1",
       sCode: "omniture/s_code",
-      touchwipe: "jquery.touchwipe.1.1.1",
       trackjs: "trackjs/trackjs",
       dfp: "jquery.dfp.js/jquery.dfp",
-      autocomplete: "autocomplete/dist/autocomplete"
+      autocomplete: "autocomplete/dist/autocomplete",
+      usabilla: "usabilla/usabilla",
+      zeroclipboard: "zeroclipboard/dist/ZeroClipboard",
+      picker: "pickadate/lib/picker",
+      pickerDate: "pickadate/lib/picker.date",
+      pickerLegacy: "pickadate/lib/legacy"
+    },
+    shim: {
+      "xdr": [ "jquery" ],
+      "dfp": [ "jquery"]
     },
     waitSeconds: 30
   };
+  
+  // App requirejs config is passed and stored on lp.require
+  
+  
+  if (lp.require && lp.require.paths) {
+    for (path in lp.require.paths) {
+      require.paths[path] = lp.require.paths[path];
+    }
+  }
+  
+  if (lp.require && lp.require.shim) {
+    for (shim in lp.require.shim) {
+      require.shim[shim] = lp.require.shim[shim];
+    }
+  }
 </script>
 
 <script>
@@ -147,11 +336,23 @@
       firstJs = d.getElementsByTagName(s)[0];
       js = d.createElement(s);
       js.async = true;
-      js.src = "//assets.staticlp.com/assets/requirejs/require-53ae9b9fdc87c2e9ed6c9679aa8d3746.js";
-      js.setAttribute("data-main", "//assets.staticlp.com/assets/app_core-998ca1411cec8a717c6e3a6f79ea6401.js");
+      js.src = "//assets.staticlp.com/assets/requirejs/require-18d8ee671e47655b884e86dfe551fbf5.js";
+      js.setAttribute("data-main", "//assets.staticlp.com/assets/app_core_external-978f2e0c79d15f4141caaad6fa590fdb.js");
       firstJs.parentNode.insertBefore(js, firstJs);
     }
   })(document, 'script');
 </script>
+
+
+<script>
+  if (!/https/.test(location.protocol)) {
+    <!-- BEGIN Tynt Script -->
+    var Tynt=Tynt||[];Tynt.push('dSm5i4oRer4BQKacwqm_6l');
+    (function(){var s=document.createElement('script');s.async="async";s.type="text/javascript";s.src='http://tcr.tynt.com/ti.js';var h=document.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})();
+  }
+</script>
+
+<!--[if (gt IE 8) | (IEMobile)]><!--><link href="//assets.staticlp.com/assets/core-6d4d686e22e8fa27ee9251199a7fa41a.css" media="all" rel="stylesheet" /><!--<![endif]--><!--[if (lt IE 9) & (!IEMobile)]><link href="//assets.staticlp.com/assets/core_ie-217514b7b8bdcbfe9912fcb507f4de89.css" media="all" rel="stylesheet" /><![endif]-->
+
 
 
