--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,69 +1,77 @@
-<!-- curl the latest rizzo resources before building jekyll -->
+<!DOCTYPE html>
+<!--[if IE 7]><html class='no-js ie7 no-freight base' lang='en'><![endif]-->
+<!--[if IE 8]><html class='no-js ie8 no-freight base' lang='en'><![endif]-->
+<!--[if IE 9]><html class='no-js ie9 no-freight base' lang='en'><![endif]-->
+<!--[if gt IE 9]><!--><html class='no-js no-freight base' lang='en'><!--<![endif]-->
+<head>
+  <meta charset="utf-8" />
+  <meta content="Lonely Planet" name="author" />
+  <meta content="#1D508D" name="theme-color" />
+  <title>Lonely Planet Tech Blog</title>
+  {% include head.html %}
+  <link href="/css/stylesheet.css" rel="stylesheet" />
+  <link href="/css/prism.css" rel="stylesheet" />
+</head>
+<body>
+  {% include body-header.html %}
 
-<!-- curl -o _includes/head.html http://rizzo.lonelyplanet.com/modern/head -->
-{% include head.html %}
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link href="/css/stylesheet.css" rel="stylesheet" />
-<link href="/css/prism.css" rel="stylesheet" />
-<!-- curl -o _includes/body-header.html http://rizzo.lonelyplanet.com/modern/body-header -->
-{% include body-header.html %}
+  <div class="row row--content copy--body context--content">
 
-<div class="row row--content copy--body context--content">
-  <div class="row__inner row__inner--content">
-    <div class="row row--secondary" id="js-secondary-nav">
-      <div class="row__inner row__inner--secondary">
-        <div class="split--left row__title--secondary">
-          <div class="icon--place--pin--before place-title"><a class="place-title-heading" href="{{baseurl}}">Tech Blog</a></div>
+    <div class="row__inner row__inner--content">
+
+      <section class="lp-blog">
+        <header class="lp-blog__header">
+          <h1 class="icon--place--pin--before place-title"><a class="place-title-heading" href="{{baseurl}}">Tech Blog</a></h1>
+        </header>
+        <div class="lp-blog__content grid-wrapper--10">
+          <div class="col--one-fifth">
+            <ul class="nav nav-list">
+              <li>
+                <a href="/">Home</a>
+              </li>
+              <li class="rss">
+                <a href="/feed.xml">RSS Feed</a>
+              </li>
+              <li class="github">
+                <a href="https://github.com/lonelyplanet">Github</a>
+              </li>
+              <li class="github">
+                <a href="https://github.com/lplabs">LP Labs Github</a>
+              </li>
+              <li class="twitter">
+                <a href="https://twitter.com/lplabs">Twitter</a>
+              </li>
+              <li class="linked_in">
+                <a href="http://www.linkedin.com/company/lonely-planet">LinkedIn</a>
+              </li>
+              <li class="coderwall">
+                <a href="https://coderwall.com/team/lonely-planet/">coderwall</a>
+              </li>
+              <li class="jobs">
+                <a href="http://www.lonelyplanet.com/careers" class="hero-unit">Now Hiring</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col--four-fifths">
+            {{ content }}
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="grid-wrapper--10">
+      </section>
 
-      <div class="col--one-fifth">
-
-        <ul class="nav nav-list">
-          <li>
-            <a href="/">Home</a>
-          </li>
-          <li class="rss">
-            <a href="/feed.xml">RSS Feed</a>
-          </li>
-          <li class="github">
-            <a href="https://github.com/lonelyplanet">Github</a>
-          </li>
-          <li class="github">
-            <a href="https://github.com/lplabs">LP Labs Github</a>
-          </li>
-          <li class="twitter">
-            <a href="https://twitter.com/lplabs">Twitter</a>
-          </li>
-          <li class="linked_in">
-            <a href="http://www.linkedin.com/company/lonely-planet">LinkedIn</a>
-          </li>
-          <li class="coderwall">
-            <a href="https://coderwall.com/team/lonely-planet/">coderwall</a>
-          </li>
-          <li class="jobs">
-            <a href="http://www.lonelyplanet.com/careers" class="hero-unit">Now Hiring</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col--four-fifths">
-        {{ content }}
-      </div>
     </div>
+
   </div>
-</div>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-44258102-1', 'lonelyplanet.github.io');
-  ga('send', 'pageview');
-</script>
-<script src="/js/prism.js"></script>
+    ga('create', 'UA-44258102-1', 'lonelyplanet.github.io');
+    ga('send', 'pageview');
+  </script>
+  <script src="/js/prism.js"></script>
 
-<!-- curl -o _includes/body-footer.html http://rizzo.lonelyplanet.com/modern/body-footer -->
-{% include body-footer.html %}
+  {% include body-footer.html %}
+</body>
+</html>
