--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
       <section class="lp-blog">
         <header class="lp-blog__header">
-          <h1 class="icon--place--pin--before place-title"><a class="place-title-heading" href="{{baseurl}}">Tech Blog</a></h1>
+          <h1 class="icon--place--pin--before place-title"><a class="place-title-heading" href="/">Tech Blog</a></h1>
         </header>
         <div class="lp-blog__content grid-wrapper--10">
           <div class="col--one-fifth">
